WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81592
DFG can no longer compile V8-v4/regexp in debug mode
https://bugs.webkit.org/show_bug.cgi?id=81592
Summary
DFG can no longer compile V8-v4/regexp in debug mode
Filip Pizlo
Reported
2012-03-19 16:42:37 PDT
Because RegExpExec does register allocation incorrectly.
Attachments
the patch
(10.77 KB, patch)
2012-03-19 16:47 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(2.53 KB, patch)
2012-03-19 16:47 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-03-19 16:47:05 PDT
Created
attachment 132716
[details]
the patch
Filip Pizlo
Comment 2
2012-03-19 16:47:44 PDT
Created
attachment 132717
[details]
the patch Uploaded the wrong patch.
Filip Pizlo
Comment 3
2012-03-19 16:59:51 PDT
Landed in
http://trac.webkit.org/changeset/111273
Andy Estes
Comment 4
2012-03-20 00:33:59 PDT
Comment on
attachment 132717
[details]
the patch I assume Gavin reviewed this in person. Clearing the review flag so this doesn't show up in the request queue.
Filip Pizlo
Comment 5
2012-03-20 00:39:55 PDT
(In reply to
comment #4
)
> (From update of
attachment 132717
[details]
) > I assume Gavin reviewed this in person. Clearing the review flag so this doesn't show up in the request queue.
Yep, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug