DFG can no longer compile V8-v4/regexp in debug mode https://bugs.webkit.org/show_bug.cgi?id=81592

Reviewed by Gavin Barraclough.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/98810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111273 268f45cc-cd09-0410-ab3c-d52691b4dbfc